Blender crashes on CleanTracks with 'DELETE_SEGMENTS' and a disabled marker #53612

Closed
opened 2017-12-22 09:46:14 +01:00 by Sebastian Koenig · 7 comments

System Information
eOS 0.4.1, GTX 980ti

Blender Version
Broken: 2.79.1, c66983c

Short description of error
When the Clean Tracks Operator would delete segments of a track that are disabled Blender crashes.

Exact steps for others to reproduce the error
Open the attached file, hit Clean Tracks and imagine sound of explosion. -> Crash.
(If you try again but hit shift+D before, it works)

clean_tracks_crash.blend

**System Information** eOS 0.4.1, GTX 980ti **Blender Version** Broken: 2.79.1, c66983c **Short description of error** When the Clean Tracks Operator would delete segments of a track that are disabled Blender crashes. **Exact steps for others to reproduce the error** Open the attached file, hit Clean Tracks and imagine sound of explosion. -> Crash. (If you try again but hit shift+D before, it works) [clean_tracks_crash.blend](https://archive.blender.org/developer/F1489658/clean_tracks_crash.blend)
Author
Member

Added subscriber: @sebastian_k

Added subscriber: @sebastian_k
Sergey Sharybin was assigned by Sebastian Koenig 2017-12-22 09:46:27 +01:00

Added subscriber: @zeauro

Added subscriber: @zeauro

Crash confirmed with 2.79 and master 41b29c6 under ubuntu 16.04.

Crash confirmed with 2.79 and master 41b29c6 under ubuntu 16.04.

Added subscriber: @dfelinto

Added subscriber: @dfelinto

Full backtrace:

#0  0x000055555a4e1c95 in BKE_movieclip_update_scopes (clip=0x61e0000b6488, user=0x614000199880, scopes=0x614000199890)
    at /home/dfelinto/src/blender/blender/source/blender/blenkernel/intern/movieclip.c:1324
#1  0x0000555558701f57 in clip_properties_region_draw (C=0x60b0000045b8, ar=0x614000199048)
    at /home/dfelinto/src/blender/blender/source/blender/editors/space_clip/space_clip.c:1491
- 2  0x0000555559153107 in ED_region_do_draw (C=0x60b0000045b8, ar=0x614000199048) at /home/dfelinto/src/blender/blender/source/blender/editors/screen/area.c:518
- 3  0x00005555582e5278 in wm_method_draw_triple (C=0x60b0000045b8, win=0x6120003538c8) at /home/dfelinto/src/blender/blender/source/blender/windowmanager/intern/wm_draw.c:568
- 4  0x00005555582e7883 in wm_draw_update (C=0x60b0000045b8) at /home/dfelinto/src/blender/blender/source/blender/windowmanager/intern/wm_draw.c:954
- 5  0x00005555582d6dbb in WM_main (C=0x60b0000045b8) at /home/dfelinto/src/blender/blender/source/blender/windowmanager/intern/wm.c:514
#6  0x00005555582cc8d2 in main (argc=1, argv=0x7fffffffdab8) at /home/dfelinto/src/blender/blender/source/creator/creator.c:527

The issue is that marker pointer is NULL there (after marker = BKE_tracking_marker_get(track, framenr));

Full backtrace: ``` #0 0x000055555a4e1c95 in BKE_movieclip_update_scopes (clip=0x61e0000b6488, user=0x614000199880, scopes=0x614000199890) at /home/dfelinto/src/blender/blender/source/blender/blenkernel/intern/movieclip.c:1324 #1 0x0000555558701f57 in clip_properties_region_draw (C=0x60b0000045b8, ar=0x614000199048) at /home/dfelinto/src/blender/blender/source/blender/editors/space_clip/space_clip.c:1491 - 2 0x0000555559153107 in ED_region_do_draw (C=0x60b0000045b8, ar=0x614000199048) at /home/dfelinto/src/blender/blender/source/blender/editors/screen/area.c:518 - 3 0x00005555582e5278 in wm_method_draw_triple (C=0x60b0000045b8, win=0x6120003538c8) at /home/dfelinto/src/blender/blender/source/blender/windowmanager/intern/wm_draw.c:568 - 4 0x00005555582e7883 in wm_draw_update (C=0x60b0000045b8) at /home/dfelinto/src/blender/blender/source/blender/windowmanager/intern/wm_draw.c:954 - 5 0x00005555582d6dbb in WM_main (C=0x60b0000045b8) at /home/dfelinto/src/blender/blender/source/blender/windowmanager/intern/wm.c:514 #6 0x00005555582cc8d2 in main (argc=1, argv=0x7fffffffdab8) at /home/dfelinto/src/blender/blender/source/creator/creator.c:527 ``` The issue is that `marker` pointer is NULL there (after marker = BKE_tracking_marker_get(track, framenr));

This issue was referenced by 3ee2ed3049

This issue was referenced by 3ee2ed3049b9860c03084876bd96641b2f1cf5f4

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#53612
No description provided.